--- a/IEEE_EMB/IEEE_EMB/IEEE_EMB.csproj
+++ b/IEEE_EMB/IEEE_EMB/IEEE_EMB.csproj
@@ -10,4 +10,11 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\css\site.css">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
