--- a/IEEE_EMB/IEEE_EMB/IEEE_EMB.csproj
+++ b/IEEE_EMB/IEEE_EMB/IEEE_EMB.csproj
@@ -13,4 +13,12 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\SeesionDocs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
