--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@ IEEE_EMB/.vs/IEEE_EMB/v17/.suo
 IEEE_EMB/.vs/IEEE_EMB/v17/.suo
 /IEEE_EMB/.vs/IEEE_EMB/v17
 .vs/IEEE_EMB/v17/.wsuo
+/IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.AssemblyInfoInputs.cache
+/IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.AssemblyInfo.cs
+/IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/apphost.exe
+/IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.csproj.CoreCompileInputs.cache
+/IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.csproj.FileListAbsolute.txt
+/IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.dll
+/IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.GeneratedMSBuildEditorConfig.editorconfig
+/IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.genruntimeconfig.cache
+/IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.pdb
