--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ IEEE_EMB/.vs/IEEE_EMB/v17/.suo
 /IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.GeneratedMSBuildEditorConfig.editorconfig
 /IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.genruntimeconfig.cache
 /IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.pdb
+/IEEE_EMB/IEEE_EMB/bin/Debug/net8.0/IEEE_EMB.dll
+/IEEE_EMB/IEEE_EMB/bin/Debug/net8.0/IEEE_EMB.exe
+/IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.AssemblyInfo.cs
+/IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.AssemblyInfoInputs.cache
+*.bin
+/IEEE_EMB/IEEE_EMB/wwwroot/Documents/2b0c65b7-3cdf-44d8-9b15-a0cd3b7b8e93.pdf
+/IEEE_EMB/IEEE_EMB/wwwroot/videos/39aa19ec-e733-4fcf-96e0-cff430575ab7.pdf
