--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ IEEE_EMB/.vs/IEEE_EMB/v17/.suo
 /IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.GeneratedMSBuildEditorConfig.editorconfig
 /IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.genruntimeconfig.cache
 /IEEE_EMB/IEEE_EMB/obj/Debug/net8.0/IEEE_EMB.pdb
+/IEEE_EMB/IEEE_EMB/wwwroot/videos/88899e75-61f0-4ce8-9cac-526c972c9ec2.mp4
+/IEEE_EMB/IEEE_EMB/wwwroot/Documents
+/.gitignore
+/.gitignore
